Add endpoints for auth
