# app/Models/User.php
@@ -9,6 +9,25 @@ use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 use Tymon\JWTAuth\Contracts\JWTSubject;
 
+/**
+ *
+ * @OA\Schema(
+ * required={"first_name", "last_name", "email", "phone_number", "password"},
+ * @OA\Xml(name="User"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="email", type="string", format="email", description="User unique email address", example="user@gmail.com"),
+ * @OA\Property(property="phone_number", type="string", example = "0990619649"),
+ * @OA\Property(property="password", type="string", example = "password"),
+ * @OA\Property(property="first_name", type="string", example="Harry"),
+ * @OA\Property(property="last_name", type="string", example="Potter"),
+ * @OA\Property(property="created_at", ref="#/components/schemas/BaseModel/properties/created_at"),
+ * @OA\Property(property="updated_at", ref="#/components/schemas/BaseModel/properties/updated_at"),
+ * )
+ *
+ * Class User
+ *
+ */
+
 class User extends Authenticatable implements JWTSubject
 {
     use HasApiTokens, HasFactory, Notifiable;
@@ -22,6 +41,9 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone_number',
+        'first_name',
+        'last_name',
     ];
 
     /**
